# yast-cluster

./: .gitignore  .travis.yml  MAINTAINER  Makefile.am  Makefile.in  README.md  RPMNAME  aclocal.m4  configure  configure.in  yast2-cluster.spec  yast2-cluster.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am  Makefile.in  ag_openais
doc/: Makefile.am  Makefile.in
doc/autodocs/: Makefile.am  Makefile.in
package/: cluster.firewalld.xml  cluster.fwd  yast2-cluster.changes  yast2-cluster.spec
src/: Cluster.ycp  Makefile.am  Makefile.in  cluster.desktop  cluster.ycp  cluster_auto.ycp  cluster_proposal.ycp  common.ycp  complex.ycp  dialogs.ycp  helps.ycp  wizards.ycp
src/clients/: cluster.rb  cluster_auto.rb  cluster_proposal.rb
src/desktop/: cluster.desktop  org.opensuse.yast.Cluster.desktop
src/include/cluster/: common.rb  common.ycp  complex.rb  complex.ycp  dialogs.rb  dialogs.ycp  helps.rb  helps.ycp  wizards.rb
src/modules/: Cluster.rb
src/scrconf/: cfg_openais.scr  cfg_pacemaker.scr  csync2_ha.scr  openais.scr  sysconfig_conntrackd.scr
src/servers_non_y2/: ag_corosync  ag_openais
